--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# backup files
+*.bak
+
 # build output
 dist/
 # generated types
@@ -22,3 +25,6 @@ pnpm-debug.log*
 
 # jetbrains setting folder
 .idea/
+
+# vscode setting folder
+.vscode/
